# sentence_extractor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: sentence_extractor.yaml
src/: extractor.py  rules.py  sentences.py  text_reading.py
tests/: test_extractor.py  test_rules.py  test_text_reading.py
texts/: eggs.epub  olesya.epub  test.txt  test2.txt  test_random.txt
